--- a/index.html
+++ b/index.html
@@ -9,42 +9,22 @@
       color: #00ff00;
       font-family: 'Courier New', Courier, monospace;
       margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
-    #terminal-container {
-      display: flex;
-      flex-direction: row;
-      height: 100vh;
-      align-items: flex-start;
-      justify-content: space-between;
+      padding: 40px 0 0 40px;
+      font-size: 1.15em;
     }
     #hack-console {
-      background: #181818;
-      border-radius: 5px;
-      padding: 30px 20px;
-      margin: 40px 0 0 40px;
-      min-width: 50vw;
-      max-width: 700px;
-      min-height: 400px;
-      box-shadow: 0 0 12px #c00;
-      font-size: 1.15em;
       white-space: pre-line;
-      overflow: hidden;
+      min-height: 400px;
+      max-width: 700px;
+      margin-bottom: 36px;
     }
     #ascii-logo {
       color: #ff2222;
       font-family: 'Courier New', Courier, monospace;
-      font-size: 1em;
-      background: #181818;
-      border-radius: 8px;
-      padding: 36px 18px;
-      margin: 40px 40px 0 0;
-      box-shadow: 0 0 14px #900;
-      height: auto;
-      min-width: 340px;
-      max-width: 340px;
-      text-align: right;
+      font-size: 1.6em;
+      text-align: left;
+      margin-left: 0;
+      line-height: 1.05em;
       user-select: none;
     }
     .blinking {
@@ -58,45 +38,31 @@
   </style>
 </head>
 <body>
-  <div id="terminal-container">
-    <div id="hack-console"></div>
-    <pre id="ascii-logo">
-      __      __      _                                 
-     /  \    /  \   | |                                
-    |    |  |    |  | |   __      __  ___   _   _  ___ 
-    |    |  |    |  | |   \ \ /\ / / / _ \ | | | |/ _ \
-    |    |  |    |  | |    \ V  V / |  __/ | |_| |  __/
-     \__/    \__/   |_|     \_/\_/   \___|  \__, |\___|
-                                             __/ |    
-                                            |___/     
-    </pre>
-  </div>
+  <div id="hack-console"></div>
+  <pre id="ascii-logo">
+       _____
+     /      \
+    |  () () |
+     \  /\  /
+      |____|
+     /      \
+    |        |
+     \______/ 
+  </pre>
   <script>
     const lines = [
-      "Iniciando acceso forzado a WhatsApp...",
-      "Obteniendo permisos de administrador...",
-      "Escaneando redes cercanas...",
-      "Interceptando paquetes de datos...",
-      "Localizando ubicación GPS del dispositivo...",
-      "Extrayendo información confidencial...",
-      "Rastreando contactos y llamadas recientes...",
-      "Analizando patrones de comunicación...",
-      "Desbloqueando cifrado avanzado...",
-      "Acceso root al sistema: obtenido.",
-      "Detectando archivos ocultos...",
-      "Filtrando imágenes y videos privados...",
-      "Recuperando mensajes eliminados...",
-      "Tomando control de cámara y micrófono...",
-      "Enviando notificaciones fantasmas...",
-      "Infectando con malware de rastreo...",
-      "Redirigiendo todas tus llamadas...",
-      "Destruyendo respaldo en la nube...",
-      "Desactivando medidas de seguridad...",
-      "Reportando actividad sospechosa a la policía...",
-      "Desbloqueando tu WhatsApp para uso externo...",
-      "¿Creías que estabas a salvo?",
-      "La privacidad ya no existe.",
-      ];
+      "Iniciando hackeo de WhatsApp...",
+      "Estableciendo conexión segura...",
+      "Rastreando IP...",
+      "Localizando dispositivo...",
+      "Accediendo a base de datos de WhatsApp...",
+      "Descifrando mensajes...",
+      "Obteniendo contraseñas...",
+      "Analizando conversaciones recientes...",
+      "Descargando archivos multimedia...",
+      "¡Acceso concedido!",
+      "Todo esto es falso, tu WhatsApp está seguro 😄"
+    ];
 
     const consoleDiv = document.getElementById('hack-console');
     let i = 0;
@@ -105,7 +71,7 @@
       if (i < lines.length) {
         consoleDiv.innerHTML += lines[i] + "\n";
         i++;
-        setTimeout(printLine, Math.random() * 500 + 400);
+        setTimeout(printLine, Math.random() * 800 + 400);
       } else {
         consoleDiv.innerHTML += "\n";
         const cursor = document.createElement('span');
