--- a/index.html
+++ b/index.html
@@ -51,16 +51,29 @@
   </pre>
   <script>
     const lines = [
-      "Iniciando hackeo de WhatsApp...",
-      "Estableciendo conexión segura...",
-      "Rastreando IP...",
-      "Localizando dispositivo...",
-      "Accediendo a base de datos de WhatsApp...",
-      "Descifrando mensajes...",
-      "Obteniendo contraseñas...",
-      "Analizando conversaciones recientes...",
-      "Descargando archivos multimedia...",
-      "¡Acceso concedido!",
+      "Iniciando acceso forzado a WhatsApp...",
+      "Obteniendo permisos de administrador...",
+      "Escaneando redes cercanas...",
+      "Interceptando paquetes de datos...",
+      "Localizando ubicación GPS del dispositivo...",
+      "Extrayendo información confidencial...",
+      "Rastreando contactos y llamadas recientes...",
+      "Analizando patrones de comunicación...",
+      "Desbloqueando cifrado avanzado...",
+      "Acceso root al sistema: obtenido.",
+      "Detectando archivos ocultos...",
+      "Filtrando imágenes y videos privados...",
+      "Recuperando mensajes eliminados...",
+      "Tomando control de cámara y micrófono...",
+      "Enviando notificaciones fantasmas...",
+      "Infectando con malware de rastreo...",
+      "Redirigiendo todas tus llamadas...",
+      "Destruyendo respaldo en la nube...",
+      "Desactivando medidas de seguridad...",
+      "Reportando actividad sospechosa a la policía...",
+      "Desbloqueando tu WhatsApp para uso externo...",
+      "¿Creías que estabas a salvo?",
+      "La privacidad ya no existe.",
       ];
 
     const consoleDiv = document.getElementById('hack-console');
