--- a/index.html
+++ b/index.html
@@ -85,26 +85,28 @@
   <script>
     const lines = [
       "Iniciando acceso forzado a WhatsApp...",
-      "Obteniendo permisos de administrador...",
-      "Escaneando redes cercanas...",
-      "Interceptando paquetes de datos...",
-      "Localizando ubicación GPS del dispositivo...",
-      "Extrayendo información confidencial...",
-      "Rastreando contactos y llamadas recientes...",
-      "Analizando patrones de comunicación...",
-      "Desbloqueando cifrado avanzado...",
+      "descifrando IP: 192.168.56.101"
+      "descifrando MAC: A4:7C:56:2B:89:FF"
+      "Obteniendo permisos de administrador.",
+      "Escaneando redes cercanas.",
+      "Interceptando paquetes de datos.",
+      "Localizando ubicación GPS del dispositivo.",
+      "Extrayendo información confidencial.",
+      "Rastreando contactos y llamadas recientes.",
+      "Analizando patrones de comunicación.",
+      "Desbloqueando cifrado avanzado.",
       "Acceso root al sistema: obtenido.",
-      "Detectando archivos ocultos...",
-      "Filtrando imágenes y videos privados...",
-      "Recuperando mensajes eliminados...",
-      "Tomando control de cámara y micrófono...",
-      "Enviando notificaciones fantasmas...",
-      "Infectando con malware de rastreo...",
-      "Redirigiendo todas tus llamadas...",
-      "Destruyendo respaldo en la nube...",
-      "Desactivando medidas de seguridad...",
-      "Reportando actividad sospechosa a la policía...",
-      "Desbloqueando tu WhatsApp para uso externo...",
+      "Detectando archivos ocultos.",
+      "Filtrando imágenes y videos privados.",
+      "Recuperando mensajes eliminados.",
+      "Tomando control de cámara y micrófono.",
+      "Enviando notificaciones fantasmas.",
+      "Infectando con malware de rastreo.",
+      "Redirigiendo todas tus llamadas.",
+      "Destruyendo respaldo en la nube.",
+      "Desactivando medidas de seguridad.",
+      "Reportando actividad sospechosa a la policía.",
+      "Desbloqueando tu WhatsApp para uso externo.",
       "¿Creías que estabas a salvo?",
       "La privacidad ya no existe."
     ];
