--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   <script>
     const lines = [
       "Iniciando acceso forzado a WhatsApp...",
-      "descifrando IP: 192.168.56.101"
-      "descifrando MAC: A4:7C:56:2B:89:FF"
+      "descifrando IP: 192.168.56.101",
+      "descifrando MAC: A4:7C:56:2B:89:FF",
       "Obteniendo permisos de administrador.",
       "Escaneando redes cercanas.",
       "Interceptando paquetes de datos.",
