--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       // Redirige después de 2 segundos de iniciar la lluvia
       setTimeout(() => {
         clearInterval(spamInterval);
-        window.location.href = "https://www.google.com"; // Cambia la URL aquí si quieres otra página
+        window.location.href = "https://img.webme.com/pic/g/go-to-sleep-sitio-oficial/ojos.jpg"; // Cambia la URL aquí si quieres otra página
       }, 2000);
     }
 
